[package]
name = "ripgrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
nom = "7.1.1"
chrono = "0.4"
bitflags = "1.3.2"
lazy_static = "1.4.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
numpy = "0.17"
ibmfloat = "0.1.1"
thiserror = "1.0.38"
clap = {version="4.1.1",features=["derive"]}
log = "0.4"
